@@ -1,4 +1,6 @@
 lldpd (1.0.11)
+  * Changes:
+    + Disable LLDP in firmware for Intel X7xx cards.
   * Fix:
     + Ensure Intel E8xx cards can transmit LLDP packets.
 
